--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.0.4",
+    "mongoose-delete": "^0.5.4",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
