--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "author": "José Alvarado",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "mongoose-delete": "^0.5.4",
     "multer": "^1.4.5-lts.1"
