--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "mongoose-delete": "^0.5.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.2.4",
+    "sequelize": "^6.31.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
